PEH-3397 - Alignment issues in Study visit details card/Task details card
The previous RRTable.css file was merged with the latest changes. How random CSS was removed is uncertain but styles restored and the new RTL alignments added.

--- a/force-app/main/community-common/aura/RRTable/RRTable.css
+++ b/force-app/main/community-common/aura/RRTable/RRTable.css
@@ -1,106 +1,42 @@
-.THIS.ts-tab-container {
-    display: flex;
-    min-height: 62px;
-    width: 97%;
-    overflow-y: hidden;
-    -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
-    margin: 0 15px;
-    position: relative;
+/**
+ * Created by Leonid Bartenev
+ */
+.THIS.rr-table th {
+    height: 43px;
+    background-color: #f8f9fb;
+    padding: 4px 10px;
 }
 
-.THIS.ts-tab-container:after {
-    content: '';
-    height: 1px;
-    width: 100%;
-    position: absolute;
-    background: #d9d9d9;
-    bottom: 2px;
-    left: 0;
+.THIS.rr-table.rtl,
+.THIS.rr-table.rtl th,
+.THIS.rr-table.rtl td {
+    text-align: right;
 }
 
-.THIS.ts-tab-container .ts-tab-right,
-.THIS.ts-tab-container .ts-tab-left {
-    display: flex;
-    min-height: 62px;
-}
-.THIS.ts-tab-container .ts-tab-right {
-    float: right;
+.THIS.rr-table td {
+    color: #595959;
+    padding: 2px 10px;
+    height: 36px;
 }
 
-.THIS.ts-tab-container .ts-tab-right .ts-tub-button {
-    display: grid;
-    width: 62px;
-    padding-top: 10px;
-    white-space: normal;
+.THIS.rr-table tr:not:last-child td {
+    border-bottom: 1px solid #eaeaea;
+}
+
+.THIS.rr-table a {
     color: #297dfd;
-    font-size: 10px;
-    font-weight: 600;
-    line-height: 14px;
-    text-align: center;
-}
-
-.THIS.ts-tab-container .ts-tab-left {
-    float: left;
-    margin-right: auto;
-}
-
-.THIS.ts-tab-container .ts-tab {
-    min-width: 70px;
-    border-collapse: collapse;
-    opacity: 0.6;
-    text-align: center;
-    padding: 10px 20px;
-    white-space: nowrap;
-}
-
-.THIS.ts-tab-container .ts-tab:first-child {
-    padding: 10px 20px 10px 0;
-}
-
-.THIS.ts-tab-container .ts-tab-right .ts-tab:first-child {
-    padding: 10px 0 10px 20px;
-}
-
-.THIS.ts-tab-container .ts-tab:hover {
-    opacity: 1;
-    color: #000;
-}
-
-.THIS .ts-tab .rr-icon-default {
-    display: block;
-    width: 24px;
-    height: 24px;
-    margin: 0 auto;
-}
-
-.THIS .ts-tab label {
     font-size: 1rem;
-    line-height: 12px;
+    line-height: 21px;
+}
+
+/* @krishna Mahto - PEH-1379  */
+.THIS .slds-form-element__icon {
     display: inline-block;
-    margin-bottom: 10px;
-    position: relative;
-}
-
-.THIS .ts-tab.selected {
-    opacity: 1;
-    pointer-events: none;
-    color: #000;
-    /*   text-shadow:
-        -.25px -.25px 0 #000,
-        .25px -.25px 0 #000; */
-}
-
-.THIS .ts-tab.selected label:after {
-    content: '';
-    background-color: #297dfd;
-    width: 100%;
-    height: 5px;
-    border-radius: 5px;
     position: absolute;
-    bottom: -20px;
-    left: 0;
-    z-index: 1000;
+    padding-top: 0;
+    vertical-align: top;
+    line-height: 1;
+    z-index: 1;
 }
 
 .THIS .ts-tab.disabled {
